force-app/main/default/objects/Exception_Request_Divestiture__c/Exception_Request_Divestiture__c.object-meta.xml
<CustomObject>
    <description>Track requests for changes in RF Off Air or Physical Decoms once the dates are locked.</description>
    <label>Exception Request Divestiture</label>
    <nameField>
        <label>Exception Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exception Requests Divestiture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>