force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Additional_Justification_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Justification_Required__c</fullName>
    <inlineHelpText>Explain what additional Justification is needed to approve the request.</inlineHelpText>
    <label>Additional Justification Required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>