force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved/Rejected by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Requests_Divestiture1</relationshipName>
    <type>Lookup</type>
</CustomField>