force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Current_Former_RF_Off_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Former_RF_Off_Air_Date__c</fullName>
    <inlineHelpText>RF Shutdown Date at the time the exception request was created.</inlineHelpText>
    <label>Current/Former RF Off Air Date</label>
    <type>Date</type>
</CustomField>