force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <label>Date Approved/Rejected</label>
    <type>DateTime</type>
</CustomField>