force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Date_Dish_Notified_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Date_Dish_Notified_of_Change__c</fullName>
    <label>Date Dish Notified of Change</label>
    <type>Date</type>
</CustomField>