force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Delay_Cause_Codes__c.field-meta.xml
<CustomField>
    <fullName>Delay_Cause_Codes__c</fullName>
    <label>RF Delay Cause Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Please Select</fullName>
            </value>
            <value>
                <fullName>Nearby upgrade/build delayed</fullName>
            </value>
            <value>
                <fullName>Changes in traffic patterns</fullName>
            </value>
            <value>
                <fullName>Sysem issues preventing scheduled RF shut down</fullName>
            </value>
            <value>
                <fullName>Weather conditions</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>