force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Dish_Notified_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Dish_Notified_of_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dish Notified of Change</label>
    <type>Checkbox</type>
</CustomField>