force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Divestiture_Site__c.field-meta.xml
<CustomField>
    <fullName>Divestiture_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Divestiture Site</label>
    <referenceTo>Divestiture_Site__c</referenceTo>
    <relationshipName>Exception_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>