force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Enter_Additional_Justification__c.field-meta.xml
<CustomField>
    <fullName>Enter_Additional_Justification__c</fullName>
    <label>Enter Additional Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>