force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <inlineHelpText>Select the type of exception.</inlineHelpText>
    <label>Exception Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>Select Option</label>
            </value>
            <value>
                <fullName>Change Site To Retain</fullName>
            </value>
            <value>
                <fullName>Delay RF Shutdown Date</fullName>
            </value>
            <value>
                <fullName>Delay Physical Deconstruction Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>