force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Justification_Details__c.field-meta.xml
<CustomField>
    <fullName>Justification_Details__c</fullName>
    <inlineHelpText>Please add the Documents to Related List - File</inlineHelpText>
    <label>Justification Details</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>