force-app/main/default/objects/Exception_Request_Divestiture__c/fields/MT_Good_Cause_Granted__c.field-meta.xml
<CustomField>
    <fullName>MT_Good_Cause_Granted__c</fullName>
    <label>MT Good Cause Granted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Not Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>