force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Notified_Monitoring_Trustee__c.field-meta.xml
<CustomField>
    <fullName>Notified_Monitoring_Trustee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notified Monitoring Trustee</label>
    <type>Checkbox</type>
</CustomField>