force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Notified_Monitoring_Trustee_Date__c.field-meta.xml
<CustomField>
    <fullName>Notified_Monitoring_Trustee_Date__c</fullName>
    <label>Notified Monitoring Trustee Date</label>
    <type>Date</type>
</CustomField>