force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Notified_Teams_for_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Notified_Teams_for_Feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In Chatter notify the Divestiture team, Leasing Team and Deconstruction teams of this request and ask for feedback.</inlineHelpText>
    <label>Notified Teams for Feedback</label>
    <type>Checkbox</type>
</CustomField>