force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Rejection_Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Cancelation_Reason__c</fullName>
    <inlineHelpText>Enter the reason for the rejection/cancelation.</inlineHelpText>
    <label>Rejection/Cancelation Reason</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>