force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Request_Decsion__c.field-meta.xml
<CustomField>
    <fullName>Request_Decsion__c</fullName>
    <inlineHelpText>Enter the Decision Result.</inlineHelpText>
    <label>Request Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Additional Justification</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <isActive>false</isActive>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>