force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Request_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Request_Submitted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Exception_Requests_Divestiture</relationshipName>
    <type>Lookup</type>
</CustomField>