force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Requested_New_Physical_Decom_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_Physical_Decom_Date__c</fullName>
    <label>Requested New Physical Decom Date</label>
    <type>Date</type>
</CustomField>