force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Requested_New_RF_Off_Air_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_New_RF_Off_Air_Date__c</fullName>
    <label>Requested New RF Off Air Date</label>
    <type>Date</type>
</CustomField>