force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Retain_Cause_Codes__c.field-meta.xml
<CustomField>
    <fullName>Retain_Cause_Codes__c</fullName>
    <label>Retain Cause Codes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select Reason</fullName>
            </value>
            <value>
                <fullName>Nearby Upgrade/ Build Cancelled</fullName>
            </value>
            <value>
                <fullName>Traffic Pattern Changes</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>