force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Retain_Nearby_Upgrade_Build_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Retain_Nearby_Upgrade_Build_Cancelled__c</fullName>
    <inlineHelpText>If Cause Code is Nearby Upgrade/ Build Cancelled</inlineHelpText>
    <label>Retain - Additional Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Jurisdictional denials</fullName>
            </value>
            <value>
                <fullName>Landlord agreement falls through</fullName>
            </value>
            <value>
                <fullName>Site fails structural analysis</fullName>
            </value>
            <value>
                <fullName>Force Majeure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>