force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Reviewed_with_Legal__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_with_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed with Legal</label>
    <type>Checkbox</type>
</CustomField>