force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Reviewed_with_Legal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_with_Legal_Notes__c</fullName>
    <label>Reviewed with Legal - Notes</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>