force-app/main/default/objects/Exception_Request_Divestiture__c/fields/RF_Delay_Nearby_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>RF_Delay_Nearby_Upgrade__c</fullName>
    <label>RF Delay - Additional Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Select Option</fullName>
            </value>
            <value>
                <fullName>On-time delivery of backhaul</fullName>
            </value>
            <value>
                <fullName>Utility delays</fullName>
            </value>
            <value>
                <fullName>Jurisdictional delays</fullName>
            </value>
            <value>
                <fullName>Leasing delays (Landlord responsiveness)</fullName>
            </value>
            <value>
                <fullName>Extensive structural modifications</fullName>
            </value>
            <value>
                <fullName>Equipment delivery delay</fullName>
            </value>
            <value>
                <fullName>General contractor availability driven by industry changes</fullName>
            </value>
            <value>
                <fullName>Site access issues</fullName>
            </value>
            <value>
                <fullName>Force Majeure delays</fullName>
            </value>
            <value>
                <fullName>Construction delays</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>