force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Site_Deconstruction__c.field-meta.xml
<CustomField>
    <fullName>Site_Deconstruction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Deconstruction</label>
    <referenceTo>Site_Decommission__c</referenceTo>
    <relationshipName>Exception_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>