force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Request</fullName>
                <default>true</default>
                <label>New Request</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Returned to Requestor</fullName>
            </value>
            <value>
                <fullName>Post Approval Steps</fullName>
            </value>
            <value>
                <fullName>Closed/Approved</fullName>
            </value>
            <value>
                <fullName>Closed/Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>