force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Submit_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Submit_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Record will be routed to Stacy Tindell for Review</inlineHelpText>
    <label>Submit for Approval</label>
    <type>Checkbox</type>
</CustomField>