force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Team_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Team_Feedback__c</fullName>
    <inlineHelpText>Enter summary of any key feedback recieved from the national teams here.</inlineHelpText>
    <label>Team Feedback</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>