force-app/main/default/objects/Exception_Request_Divestiture__c/fields/Teams_Notified_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Teams_Notified_of_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This box is checked when Approval has been granted</inlineHelpText>
    <label>Teams Notified of Approval</label>
    <type>Checkbox</type>
</CustomField>