force-app/main/default/objects/Exception_Request_Divestiture__c/recordTypes/Change_Site_To_Retain.recordType-meta.xml
<RecordType>
    <fullName>Change_Site_To_Retain</fullName>
    <active>true</active>
    <label>Change Site To Retain</label>
</RecordType>