force-app/main/default/objects/Exception_Request_Divestiture__c/recordTypes/Delay_Physical_Deconstruction_Date.recordType-meta.xml
<RecordType>
    <fullName>Delay_Physical_Deconstruction_Date</fullName>
    <active>true</active>
    <label>Delay Physical Deconstruction Date</label>
</RecordType>