force-app/main/default/objects/Exception_Request_Divestiture__c/recordTypes/Delay_RF_Shutdown_Date.recordType-meta.xml
<RecordType>
    <fullName>Delay_RF_Shutdown_Date</fullName>
    <active>true</active>
    <label>Delay RF Shutdown Date</label>
</RecordType>