force-app/main/default/objects/Exception_Request_Divestiture__c/validationRules/Cannot_change_record_type.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_change_record_type</fullName>
    <active>true</active>
    <description>Used to prvent record type instead ask for cancelation and new request created.</description>
    <errorConditionFormula>ISCHANGED( RecordTypeId )</errorConditionFormula>
    <errorMessage>The type of request cannot be changed once created.  If the type of exception request for the site needs to change cancel this record and create a new request from the site record.</errorMessage>
</ValidationRule>