force-app/main/default/objects/Exception_Request_Divestiture__c/validationRules/Exception_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Exception_Type</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Exception_Type__c )</errorConditionFormula>
    <errorDisplayField>Exception_Type__c</errorDisplayField>
    <errorMessage>The type of request cannot be changed once created. If the type of exception request for the site needs to change cancel this record and create a new request from the site record.</errorMessage>
</ValidationRule>