force-app/main/default/objects/Exception_Request_Divestiture__c/validationRules/Justification_Details_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Justification_Details_is_Required</fullName>
    <active>true</active>
    <description>Justification Details is Required</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
Justification_Details__c = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Justification_Details__c</errorDisplayField>
    <errorMessage>Please enter the Justification Details</errorMessage>
</ValidationRule>