force-app/main/default/objects/Exception_Request_Divestiture__c/validationRules/Requested_New_RF_Off_Air_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_New_RF_Off_Air_Date_Required</fullName>
    <active>true</active>
    <description>Requested New RF Off Air Date is Required</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
RecordType.DeveloperName = &apos;Delay_RF_Shutdown_Date&apos;,
ISNULL(Requested_New_RF_Off_Air_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Requested_New_RF_Off_Air_Date__c</errorDisplayField>
    <errorMessage>Please enter the Requested New RF Off Air Date</errorMessage>
</ValidationRule>